<resources>
    <string name="app_name">LatihanFlexibleFragment</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="this_profile">Ini activity Profile</string>
    <string name="this_category">Ini fragment Category</string>
    <string name="category_lifestyle">Ke fragment Lifestyle</string>
    <string name="category_name">Category Name</string>
    <string name="category_description">Category Description</string>
    <string name="to_profile">Ke Halaman Profile Activity</string>
    <string name="show_dialog">Tampilkan sebuah dialog</string>
    <string name="hello_home_fragment">Hello Ini Home Fragment</string>
    <string name="to_category">Ke fragment Category</string>
    <string name="question_club">Apa tim sepakbola favorit mu?</string>
    <string name="bayernmunchen">Bayern Munchen</string>
    <string name="barcelona">Barcelona</string>
    <string name="realmadrid">Real Madrid</string>
    <string name="liverpool">Liverpool</string>
    <string name="choose">Pilih</string>
    <string name="close">Tutup</string>
</resources>
